# SGBD

./: .gitignore  CMakeLists.txt  compile_commands.json  schemas_back.txt
.cache/clangd/index/: block.hpp.6CD4DF9BFB5A89F4.idx  block_map.hpp.C12C7B453C33DFA8.idx  block_reads.cpp.721D255999DC4235.idx  block_writes.cpp.BD58246F914D0831.idx  bulk_ops.cpp.AA1DDA710A679B3B.idx  constants.hpp.83B2E37F47B5A767.idx  disected_query.hpp.00591D5FBE846FD1.idx  disk_manager.cpp.3205F6100020B92F.idx  disk_manager.cpp.9EA20989E737221D.idx  disk_manager.hpp.EB3F909C9492645F.idx  disk_related.cpp.F5928E6CB8945F33.idx  file.hpp.1DA374A7F91F15DA.idx  fill_meta.cpp.6C38211804C47EFA.idx  (+33 more)
csv/: chica.csv  housing_1.csv
include/: block_map.hpp  disk_manager.hpp  megatron.hpp  types.hpp
include/buffer/: buffer_manager.hpp  buffer_pool.hpp  buffer_ui.hpp  frame.hpp
include/buffer_manager/: buffer_manager.h  frame.h
include/serial/: fixed_data.hpp  generic.hpp  page_header.hpp  sector0.hpp  sector1.hpp  slotted_data.hpp  table.hpp
src/: main.cpp  test.cpp
src/buffer/: trash.cpp
src/buffer_manager/: buffer_manager.cpp  evictions.cpp  loads.cpp  prints.cpp  trash.cpp
src/disk_manager/: block_reads.cpp  block_writes.cpp  disk_manager.cpp  header_ops.cpp  sector_reads.cpp  sector_writes.cpp  utils.cpp
src/megatron/: bulk_ops.cpp  disk_related.cpp  fill_meta.cpp  megatron.cpp  misc.cpp  pages.cpp  registers.cpp  sql_deletes.cpp  sql_inserts.cpp  sql_ops.cpp  sql_selects.cpp  translate.cpp  traverse_pages.cpp  ui.cpp
useless/: disected_query.hpp  file.hpp  relation.cpp  relation.hpp
